--- a/src/server/GrafyChat/Properties/launchSettings.json
+++ b/src/server/GrafyChat/Properties/launchSettings.json
@@ -1,23 +1,11 @@
 ﻿{
   "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
-    "iisExpress": {
-      "applicationUrl": "http://localhost:18602",
-      "sslPort": 44326
-    }
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true
   },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "GrafyChat": {
       "commandName": "Project",
-      "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
